# shadowzero

./: .clang-format  .gitignore  README.md  requirements.txt
.github/workflows/: meson.yml
cpp/: meson.build  meson.options
cpp/benchmark/: evaluator_libtorch_basic.cpp  evaluator_libtorch_onnx_basic.cpp  onnx_demo.cpp  strategy_alphazero.cpp
cpp/cmd/: game_connect4.cpp  game_shadow.cpp  gate_connect4.cpp  gate_shadow.cpp  gate_shadow_cpuct.cpp  selfplay_connect4.cpp  selfplay_shadow.cpp
cpp/core/algorithm/: strategy_alphazero.h  strategy_alphazero_test.cpp  strategy_random.h
cpp/core/evaluator/: base.h  dummy.h  libtorch_queued.h  libtorch_simple.h  onnx_simple.h
cpp/core/util/: argh.h  common.h  io.h  libtorch.h  lru_cache.h  xxhash64.h
cpp/game/: connect4.h  shadow.h  shadow_test.cpp
go/: go.mod  go.sum
go/cmd/trainhelper/: main.go
go/pkg/config/: config.go
go/pkg/db/: db.go  db.sql
go/pkg/repo/: interface.go
go/pkg/repo/dataset/: repo.go
go/pkg/repo/gating/: repo.go
go/pkg/repo/model/: repo.go
python/: elo.py  export_onnx.py  nnarch.py  nnarch_connect4.py  server.py  train_connect4.py  train_shadow.py
scripts/: build.sh  calc-elo.sh  clang-format.sh  gate.sh  prepare-meson.sh  rebuild.sh  selfloop-gating.sh  selfloop-play.sh  selfloop-train.sh
testdata/: shadow_baseline_500.pt
